# MacroFlow3D

./: .aidigestignore  .clang-format  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  GSRB_Smooth_up_residual_3D_macro.cu  LICENSE  Makefile  PERFORMANCE_CONTRACT.md  alphaU_3D.cu  alpha_3D.cu  codebase-etapa5.4terminada.md  compile2.sh  flow_lib.sh  main_transport_JSON_input.cu  omega_r_3D.cu  omega_x_3D.cu  random_field_generation.cu  run_test.sh  stencil_head_3D.cu  step_ADV_FowEuler_TVD_3D.cu  step_ADV_FowEuler_TVD_3D_2nd_order_r1.cu  step_ADV_FowEuler_TVD_3D_momentos.cu  testCField  transf_operator_3D.cu  up_residual_3D.cu
.claude/: settings.json
.claude/agents/: macroflow.md  readonly.md  research.md  review.md
.codex/: config.toml
.codex/environments/: environment.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/: analyze_invariant_quality.cu  benchmark_eigensolver.cu  cg_smoke.cu  compare_eigensolver_backends.cu  config_pcg_mg_test.yaml  config_pin_debug.yaml  config_pin_test.yaml  config_pipeline.yaml  config_pipeline_par2.yaml  config_pipeline_pspta.yaml  config_pspta_small.yaml  config_velocity_test.yaml  macroflow3d_pipeline.cu  mg_cg_compare.cu  mg_smoke.cu  operator_debug.cu  pcg_smoke.cu  physics_types_smoke.cu  pin_necessity_test.cu  run_operator_tests.cu  rwpt_flow_transport.cu  smoke_core.cu  smoke_device.cu  smoke_test_petsc.cu  validate_slepc_eigensolver.cu
docs/: AGENTS.md
docs/decisions/: README.md  template.md
docs/experiments/: README.md  template.md
docs/plans/: README.md  template.md
docs/runbooks/: autonomy-policy.md  local-wsl.md  mcp-setup.md  petsc-slepc.md  pr-workflow.md  remote-v100.md  sccache.md  worktree-pattern.md
docs/theory/: README.md  beaudoin-de-dreuzy-2013-key-claims.md  lester-2023-key-claims.md
docs/validation/: acceptance-gates.md  eval-tiers.md  local-remote-split.md  validation-loop.md
header/: MG_struct.h  homogenization_permeability.h  macros_index_kernel.h  routines_CG.h
input/: parameters_sigma0.25.json  parameters_sigma1.json  parameters_sigma2.25.json  parameters_sigma4.json  parameters_sigma6.25.json
input_advección_difusión/: inputs.txt  parameters_sigma0.25.json  parameters_sigma1.json  parameters_sigma2.25 copy.json  parameters_sigma2.25.json  parameters_sigma4.json  parameters_sigma6.25.json
input_advección_pura/: inputs.txt
legacy/: AXPBY_3D.cu  BiCGStab.cu  CCMG_V_cycle.cu  CG.cu  GSRB_Smooth_up_residual_3D.cu  GSRB_Smooth_up_residual_3D_macro.cu  GSRB_Smooth_up_residual_3D_orig.cu  Makefile  RHS_head_3D.cu  alphaU_3D.cu  alpha_3D.cu  betaU_3D.cu  beta_3D.cu  compute_velocity_from_head_for_par2.cu  compute_velocity_from_head_v1.cu  legacy.md  main_transport_JSON_input.cu  omega_r_3D.cu  omega_x_3D.cu  random_field_generation.cu  run_test.sh  stencil_head_3D.cu  step_ADV_FowEuler_TVD_3D.cu  step_ADV_FowEuler_TVD_3D_2nd_order_r1.cu  step_ADV_FowEuler_TVD_3D_momentos.cu  transf_operator_3D.cu  up_residual_3D.cu
legacy/header/: MG_struct.h  homogenization_permeability.h  linear_operator.h  macros_index_for_mf.h  macros_index_kernel.h  macros_index_mf_par2.h  macros_momentos.h  routines_BiCGStab.h  routines_CCMG.h  routines_CG.h  routines_solver_type.h
legacy/input/: inputs.txt  parameters_sigma0.25.json  parameters_sigma1.json  parameters_sigma2.25.json  parameters_sigma4.json  parameters_sigma6.25.json
legacy/input_advección_difusión/: inputs.txt  parameters_sigma0.25.json  parameters_sigma1.json  parameters_sigma2.25 copy.json  parameters_sigma2.25.json  parameters_sigma4.json  parameters_sigma6.25.json
legacy/input_advección_pura/: inputs.txt  parameters_sigma0.25.json  parameters_sigma1.json  parameters_sigma4.json  parameters_sigma6.25.json
legacy/par2/: par2-core.md
legacy/plot_script/: plot.py
output copy/out_0.25/: macrodispersion_var_v9_0.25_1.csv  macrodispersion_var_v9_0.25_10.csv  macrodispersion_var_v9_0.25_102.csv  macrodispersion_var_v9_0.25_103.csv  macrodispersion_var_v9_0.25_105.csv  macrodispersion_var_v9_0.25_108.csv  macrodispersion_var_v9_0.25_109.csv  macrodispersion_var_v9_0.25_110.csv  macrodispersion_var_v9_0.25_111.csv  macrodispersion_var_v9_0.25_114.csv  macrodispersion_var_v9_0.25_116.csv  macrodispersion_var_v9_0.25_117.csv  macrodispersion_var_v9_0.25_119.csv  macrodispersion_var_v9_0.25_122.csv  macrodispersion_var_v9_0.25_124.csv  macrodispersion_var_v9_0.25_125.csv  macrodispersion_var_v9_0.25_126.csv  macrodispersion_var_v9_0.25_127.csv  macrodispersion_var_v9_0.25_129.csv  macrodispersion_var_v9_0.25_130.csv  macrodispersion_var_v9_0.25_132.csv  macrodispersion_var_v9_0.25_133.csv  macrodispersion_var_v9_0.25_138.csv  macrodispersion_var_v9_0.25_14.csv  macrodispersion_var_v9_0.25_142.csv  macrodispersion_var_v9_0.25_143.csv  macrodispersion_var_v9_0.25_144.csv  macrodispersion_var_v9_0.25_145.csv  macrodispersion_var_v9_0.25_149.csv  macrodispersion_var_v9_0.25_150.csv  macrodispersion_var_v9_0.25_151.csv  macrodispersion_var_v9_0.25_153.csv  macrodispersion_var_v9_0.25_154.csv  macrodispersion_var_v9_0.25_157.csv  macrodispersion_var_v9_0.25_158.csv  macrodispersion_var_v9_0.25_159.csv  macrodispersion_var_v9_0.25_161.csv  macrodispersion_var_v9_0.25_164.csv  macrodispersion_var_v9_0.25_165.csv  macrodispersion_var_v9_0.25_166.csv  (+257 more)
output copy/out_1.00/: macrodispersion_var_v9_1.00_0.csv  macrodispersion_var_v9_1.00_10.csv  macrodispersion_var_v9_1.00_103.csv  macrodispersion_var_v9_1.00_106.csv  macrodispersion_var_v9_1.00_107.csv  macrodispersion_var_v9_1.00_109.csv  macrodispersion_var_v9_1.00_112.csv  macrodispersion_var_v9_1.00_113.csv  macrodispersion_var_v9_1.00_115.csv  macrodispersion_var_v9_1.00_116.csv  macrodispersion_var_v9_1.00_117.csv  macrodispersion_var_v9_1.00_118.csv  macrodispersion_var_v9_1.00_12.csv  macrodispersion_var_v9_1.00_120.csv  (+305 more)
plot_script/: plot.py
scripts/: create-pr.sh  create-worktree.sh  remote_build_and_test.sh  remote_run_pipeline.sh  rsync_to_v100.sh  setup-sccache.sh
(+1356 files in other folders)
